==> aws/amazon-freertos/lib/third_party/trustx/pal/xmc4800_freertos/pal_i2c.c <==
#include "optiga/pal/pal_i2c.h"
#include "i2c_master_dave/i2c_master.h"
#include "i2c_master_dave/i2c_master_extern.h"
#include "i2c_master_dave/i2c_master_conf.h"
#include "FreeRTOS.h"
#include "queue.h"
#include "task.h"
#define PAL_I2C_MASTER_MAX_BITRATE  (400)

pal_status_t pal_i2c_init(const pal_i2c_t* p_i2c_context)
{
	uint16_t status = PAL_STATUS_FAILURE;
	status = I2C_MASTER_Init(&i2c_master_0);
	if (status == 0) {
		status = PAL_STATUS_SUCCESS;
	}

	/* Create the handler for the callbacks. */
	xTaskCreate( i2c_result_handler,       /* Function that implements the task. */
				"TrstI2CXHndlr",          /* Text name for the task. */
				configMINIMAL_STACK_SIZE,      /* Stack size in words, not bytes. */
				NULL,    /* Parameter passed into the task. */
				tskIDLE_PRIORITY,/* Priority at which the task is created. */
				NULL );      /* Used to pass out the created task's handle. */

	/* Create a queue for results. Not more than 2 interrupts one by one are expected*/
	trustx_i2cresult_queue = xQueueCreate( 2, sizeof( i2c_result_t ) );

    return status;
}

pal_status_t pal_i2c_write(pal_i2c_t* p_i2c_context,uint8_t* p_data , uint16_t length)
{
    pal_status_t status = PAL_STATUS_FAILURE;

    //Acquire the I2C bus before read/write
    if(PAL_STATUS_SUCCESS == pal_i2c_acquire(p_i2c_context))
    {
        gp_pal_i2c_current_ctx = p_i2c_context;

        //Invoke the low level i2c master driver API to write to the bus
        if (I2C_MASTER_STATUS_SUCCESS != I2C_MASTER_Transmit(p_i2c_context->p_i2c_hw_config , (bool)TRUE,
                                                             (p_i2c_context->slave_address << 1), p_data,
                                                              length, (bool)TRUE))
        {
            //If I2C Master fails to invoke the write operation, invoke upper layer event handler with error.

            //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
            ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                       (p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_ERROR);

            //Release I2C Bus
            pal_i2c_release((void *)p_i2c_context);
        }
        else
        {
            status = PAL_STATUS_SUCCESS;
        }
    }
    else
    {
        status = PAL_STATUS_I2C_BUSY;
        //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
        ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                        (p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_BUSY);
    }
    return status;
}

pal_status_t pal_i2c_read(pal_i2c_t* p_i2c_context , uint8_t* p_data , uint16_t length)
{
    pal_status_t status = PAL_STATUS_FAILURE;

    //Acquire the I2C bus before read/write
    if (PAL_STATUS_SUCCESS == pal_i2c_acquire(p_i2c_context))
    {
        gp_pal_i2c_current_ctx = p_i2c_context;

        //Invoke the low level i2c master driver API to read from the bus
        if (I2C_MASTER_STATUS_SUCCESS != I2C_MASTER_Receive(p_i2c_context->p_i2c_hw_config, (bool)TRUE,
                                                           (p_i2c_context->slave_address << 1), p_data, length,
                                                           (bool)TRUE, (bool)TRUE))
        {
            //If I2C Master fails to invoke the read operation, invoke upper layer event handler with error.

            //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
            ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                       (p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_ERROR);

            //Release I2C Bus
            pal_i2c_release((void *)p_i2c_context);
        }
        else
        {
            status = PAL_STATUS_SUCCESS;
        }
    }
    else
    {
        status = PAL_STATUS_I2C_BUSY;
        //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
        ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                        (p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_BUSY);
    }
    return status;
}
